--- a/index.html
+++ b/index.html
@@ -4,55 +4,89 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Tailwind</title>
+    <title>Web Dev Training Center</title>
   </head>
-  <body class="flex-col">
-    <nav class="flex bg-white w-full top-0 z-10 justify-between px-8 py-8">
-      <div class="flex gap-2">
-        <div>Image</div>
-        <h1>Title</h1>
-      </div>
-      <div>
+  <body class="flex flex-col min-h-screen">
+    <nav class="bg-white w-full shadow-md">
+      <div class="container mx-auto flex justify-between px-4 lg:px-8 py-4">
+        <div class="flex items-center gap-4">
+          <img src="assets/images/coding.png" alt="Logo" class="h-10" />
+          <h1 class="text-xl font-bold text-gray-900">Web Dev Training</h1>
+        </div>
         <ul
-          class="flex gap-4 text-xl lg:text-black text-cyan-600 font-semibold uppercase"
+          class="flex gap-6 text-lg text-center items-center font-semibold text-gray-900 uppercase"
         >
-          <li class="hover:text-cyan-700 transition-all duration-300">
+          <li class="hover:text-cyan-600 transition duration-300">
             <a href="#">Home</a>
           </li>
-          <li class="hover:text-cyan-700 transition-all duration-300">
+          <li class="hover:text-cyan-600 transition duration-300">
             <a href="#">About</a>
+          </li>
+          <li class="hover:text-cyan-600 transition duration-300">
+            <a href="#">Courses</a>
+          </li>
+          <li class="hover:text-cyan-600 transition duration-300">
+            <a href="#">Contact</a>
           </li>
         </ul>
       </div>
     </nav>
-    <main>
+
+    <main class="relative">
       <div class="relative max-h-screen">
-        <img src="images/bg.jpg" alt="" class="w-full" />
+        <img
+          src="assets/images/background.png"
+          alt="Background"
+          class="w-full h-screen object-cover"
+        />
         <div
-          class="absolute text-white z-10 bottom-96 w-full gap-6 flex flex-col items-center"
+          class="absolute inset-0 bg-black bg-opacity-85 flex flex-col items-center justify-center text-white text-center gap-6"
         >
-          <div class="flex flex-col gap-4 items-center">
-            <h1 class="text-5xl font-bold">Effective Learning</h1>
-            <h3 class="text-lg">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            </h3>
-          </div>
+          <h1 class="text-5xl font-bold">Effective Learning</h1>
+          <p class="text-lg max-w-lg">
+            Empower your skills with our tailored web development courses for
+            all levels.
+          </p>
           <div class="flex gap-4">
             <button
-              class="px-4 py-2 bg-cyan-600 rounded-md text-lg font-semibold text-white"
+              class="px-9 py-3 bg-cyan-600 rounded-md text-lg font-semibold hover:bg-cyan-700 transition duration-300"
             >
               Register
             </button>
-            <button>Login</button>
+            <button
+              class="px-9 py-3 border-2 border-cyan-600 rounded-md text-lg font-semibold hover:bg-cyan-600 hover:text-white transition duration-300"
+            >
+              Login
+            </button>
           </div>
         </div>
       </div>
     </main>
-    <footer class="flex z-10">
-      <div class="w-8 h-8">
-        <img src="images/facebook.png" alt="" />
+
+    <footer class="bg-cyan-950 text-white py-6">
+      <div
+        class="container mx-auto flex justify-between items-center px-4 lg:px-8"
+      >
+        <p class="text-sm">
+          &copy; 2024 Web Dev Training Center. All rights reserved.
+        </p>
+        <div class="flex gap-4">
+          <a href="#" aria-label="Facebook">
+            <img
+              src="assets/images/facebook.png"
+              alt="Facebook"
+              class="w-6 h-6"
+            />
+          </a>
+          <a href="#" aria-label="Instagram">
+            <img
+              src="assets/images/gmail.png"
+              alt="Instagram"
+              class="w-6 h-6"
+            />
+          </a>
+        </div>
       </div>
-      <h1 class="text-6xl">facebook</h1>
     </footer>
   </body>
 </html>
